# Hades-SavesExtractor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
libs/lua-5.2.2/: CMakeLists.txt
libs/luabins/: CMakeLists.txt
scripts/: extract.bat  import.bat
src/: App.cpp  App.h  GameVersions.h  HadesSave.cpp  HadesSave.h  LuaFileWriteHelper.h  LuaReadHelper.h  LuaSerialize.cpp  LuaSerialize.h  SGGBinaryParser.h  SGGBinaryWritter.h  adler32.cpp  adler32.h  main.cpp
src/Hades/: HadesSave.cpp  HadesSave.h  HadesSaveConverter.cpp  HadesSaveConverter.h
tests/: Hades2.sav  Hades2ParseTest.cpp
